# tuillem

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  config.example.yaml  demo.tape
.github/workflows/: ci.yml  release.yml
crates/tuillem-config/: Cargo.toml
crates/tuillem-config/src/: lib.rs
crates/tuillem-core/: Cargo.toml
crates/tuillem-core/src/: actions.rs  coordinator.rs  lib.rs  state.rs
crates/tuillem-db/: Cargo.toml
crates/tuillem-db/src/: lib.rs  messages.rs  search.rs  sessions.rs
crates/tuillem-markdown/: Cargo.toml
crates/tuillem-markdown/src/: highlight.rs  lib.rs  parser.rs  renderer.rs  width.rs
crates/tuillem-plugin/: Cargo.toml
crates/tuillem-plugin/src/: lib.rs
crates/tuillem-provider/: Cargo.toml
crates/tuillem-provider/src/: anthropic.rs  lib.rs  ollama.rs  openai.rs
crates/tuillem-tui/: Cargo.toml
crates/tuillem-tui/src/: app.rs  commands.rs  control.rs  conversation.rs  help.rs  input.rs  lib.rs  settings.rs  sidebar.rs  theme.rs
docs/superpowers/plans/: 2026-04-09-tuillem-implementation.md
docs/superpowers/specs/: 2026-04-09-tuillem-design.md
migrations/: 001_initial.sql
src/: main.rs  setup.rs
