[workspace]
resolver = "2"
members = [
    "crates/tuillem-config",
    "crates/tuillem-db",
    "crates/tuillem-markdown",
    "crates/tuillem-provider",
    "crates/tuillem-plugin",
    "crates/tuillem-core",
    "crates/tuillem-tui",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/seesee/tuillem"
homepage = "https://github.com/seesee/tuillem"
authors = ["Chris Carline"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[package]
name = "tuillem"
version.workspace = true
edition.workspace = true
description = "A 3-pane terminal AI chat client with easy connectivity to local and remote LLM endpoints"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["tui", "llm", "chat", "ai", "terminal"]
categories = ["command-line-interface"]

[dependencies]
tuillem-config = { path = "crates/tuillem-config", version = "0.1.0" }
tuillem-db = { path = "crates/tuillem-db", version = "0.1.0" }
tuillem-markdown = { path = "crates/tuillem-markdown", version = "0.1.0" }
tuillem-provider = { path = "crates/tuillem-provider", version = "0.1.0" }
tuillem-plugin = { path = "crates/tuillem-plugin", version = "0.1.0" }
tuillem-core = { path = "crates/tuillem-core", version = "0.1.0" }
tuillem-tui = { path = "crates/tuillem-tui", version = "0.1.0" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_yaml = { workspace = true }
shellexpand = "3"
directories = "6"
