[package]
name = "tuillem-config"
version.workspace = true
edition.workspace = true
description = "YAML configuration parsing for tuillem"
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
directories = "6"
