[package]
name = "tuillem-core"
version.workspace = true
edition.workspace = true

[dependencies]
tuillem-config = { path = "../tuillem-config" }
tuillem-db = { path = "../tuillem-db" }
tuillem-provider = { path = "../tuillem-provider" }
tuillem-plugin = { path = "../tuillem-plugin" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio-stream = "0.1"
futures = "0.3"
