[package]
name = "tuillem-core"
version.workspace = true
edition.workspace = true
description = "Core coordinator and state management for tuillem"
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
tuillem-config = { path = "../tuillem-config", version = "0.1.3" }
tuillem-db = { path = "../tuillem-db", version = "0.1.3" }
tuillem-provider = { path = "../tuillem-provider", version = "0.1.3" }
tuillem-plugin = { path = "../tuillem-plugin", version = "0.1.3" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio-stream = "0.1"
futures = "0.3"
dirs = "6"
