[package]
name = "tuillem-db"
version.workspace = true
edition.workspace = true

[dependencies]
rusqlite = { version = "0.39", features = ["bundled-full"] }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
