[package]
name = "tuillem-markdown"
version.workspace = true
edition.workspace = true

[dependencies]
comrak = { version = "0.36", default-features = false }
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "parsing", "html", "regex-fancy"] }
ratatui = "0.30"
unicode-width = "0.2"
