[package]
name = "tuillem-plugin"
version.workspace = true
edition.workspace = true

[dependencies]
tuillem-config = { path = "../tuillem-config" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
