[package]
name = "tuillem-plugin"
version.workspace = true
edition.workspace = true
description = "External process plugin host for tuillem"
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
tuillem-config = { path = "../tuillem-config", version = "0.1.0" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
