[package]
name = "tuillem-provider"
version.workspace = true
edition.workspace = true
description = "LLM provider abstraction for tuillem"
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
tuillem-config = { path = "../tuillem-config", version = "0.1.2" }
tokio = { workspace = true }
tokio-stream = "0.1"
bytes = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
futures = "0.3"
pin-project-lite = "0.2"

[dev-dependencies]
wiremock = "0.6"
tokio = { workspace = true, features = ["test-util"] }
