[package]
name = "tuillem-tui"
version.workspace = true
edition.workspace = true

[dependencies]
tuillem-config = { path = "../tuillem-config" }
tuillem-core = { path = "../tuillem-core" }
tuillem-markdown = { path = "../tuillem-markdown" }
ratatui = "0.30"
crossterm = "0.29"
tokio = { workspace = true }
anyhow = { workspace = true }
unicode-width = "0.2"
tracing = { workspace = true }
tempfile = "3"

[dev-dependencies]
insta = "1"
