[package]
name = "tuillem-tui"
version.workspace = true
edition.workspace = true
description = "Ratatui TUI layer for tuillem"
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
tuillem-config = { path = "../tuillem-config", version = "0.1.2" }
tuillem-core = { path = "../tuillem-core", version = "0.1.2" }
tuillem-markdown = { path = "../tuillem-markdown", version = "0.1.2" }
ratatui = "0.30"
crossterm = "0.29"
tokio = { workspace = true }
anyhow = { workspace = true }
unicode-width = "0.2"
tracing = { workspace = true }
chrono = { workspace = true }
tempfile = "3"
arboard = "3"
serde_yaml = { workspace = true }

[dev-dependencies]
insta = "1"
